--- a/languagelearningapp/package.json
+++ b/languagelearningapp/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
