--- a/languagelearningapp/package.json
+++ b/languagelearningapp/package.json
@@ -22,6 +22,7 @@
     "react-bootstrap": "^2.8.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "svgo": "^3.0.2",
