--- a/languagelearningapp/package.json
+++ b/languagelearningapp/package.json
@@ -16,17 +16,20 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "bootstrap": "^5.3.0",
+    "chart.js": "^4.3.0",
     "chroma-js": "^2.4.2",
     "css-tree": "^2.3.1",
     "d3-ease": "^3.0.1",
     "framer-motion": "^10.12.18",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
+    "react-calendar": "^4.4.0",
+    "react-chartjs-2": "^5.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
     "react-move": "^6.5.0",
+    "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "svgo": "^3.0.2",
@@ -55,5 +58,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@faker-js/faker": "^8.0.2"
   }
 }
