--- a/languagelearningapp/package.json
+++ b/languagelearningapp/package.json
@@ -21,6 +21,7 @@
     "css-tree": "^2.3.1",
     "d3-ease": "^3.0.1",
     "framer-motion": "^10.12.18",
+    "path-browserify": "^1.0.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
     "react-calendar": "^4.4.0",
@@ -33,6 +34,7 @@
     "react-scripts": "5.0.1",
     "react-select": "^5.7.3",
     "svgo": "^3.0.2",
+    "util": "^0.12.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
