--- a/languagelearningapp/package.json
+++ b/languagelearningapp/package.json
@@ -29,6 +29,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-country-flag": "^3.1.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-move": "^6.5.0",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
